create github pages

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 <div class="info-widget">
                     <span class="widget-icon mbr-iconfont mbri-mobile2" style="color: rgb(255, 255, 255); fill: rgb(255, 255, 255);"></span>
                     <div class="widget-content display-4">
-                        <p class="widget-title mbr-fonts-style display-4">+ (51) 999 061 367</p>
+                        <p class="widget-title mbr-fonts-style display-4"><strong>+ (51) 999 061 367</strong></p>
                     </div>
                 </div>
                 <div class="info-widget">
@@ -71,7 +71,7 @@
                 <div class="navbar-brand">
                     <span class="navbar-logo">
                         <a href="#top">
-                            <img src="assets/images/ll.webp" alt="Mobirise" title="" style="height: 4rem;">
+                            <img src="assets/images/ll.webp" alt="Mobirise" title="" style="height: 5.5rem;">
                         </a>
                     </span>
                     <span class="navbar-caption-wrap"><a href="#top" class="brand-name mbr-black mbr-bold text-white display-5">Tree Media</a></span>
@@ -82,29 +82,29 @@
 
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav nav-dropdown js-float-line nav-right" data-app-modern-menu="true"><li class="nav-item">
-                        <a class="nav-link link mbr-black text-white display-4" href="index.html#extHeader29-2">
+                        <a class="nav-link link mbr-black text-primary display-4" href="index.html#extHeader29-2">
                             Quiénes somos</a>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link link mbr-black dropdown-toggle text-white display-4" href="https://mobirise.com" data-toggle="dropdown-submenu" aria-expanded="false">Marketing Digital</a>
+                        <a class="nav-link link mbr-black dropdown-toggle text-primary display-4" href="https://mobirise.com" data-toggle="dropdown-submenu" aria-expanded="false">Marketing Digital</a>
                         <div class="dropdown-menu">
-                            <a class="mbr-black dropdown-item text-white display-4" href="page1.html#extHeader16-g">Análisis de Web Site</a>
-                            <a class="mbr-black dropdown-item text-white display-4" href="page1.html#extHeader24-h" aria-expanded="false">Diseño Web</a><a class="mbr-black dropdown-item text-white display-4" href="page1.html#extHeader16-i" aria-expanded="false">Diseño Landing Page</a>
-                            <div class="dropdown"><div class="dropdown"><a class="mbr-black dropdown-item text-white dropdown-toggle display-4" href="page1.html#extHeader10-j" aria-expanded="false" data-toggle="dropdown-submenu">Campañas Digitales</a><div class="dropdown-menu dropdown-submenu"><a class="mbr-black dropdown-item text-white display-4" href="page1.html#extHeader10-j" aria-expanded="false">Google Ads</a><a class="mbr-black dropdown-item text-white display-4" href="page1.html#extHeader10-j" aria-expanded="false">Facebook Ads</a></div></div><div class="dropdown-menu dropdown-submenu"><a class="mbr-black dropdown-item text-white display-4" href="page1.html#extContent6-k" aria-expanded="false">Adwords</a><a class="mbr-black dropdown-item text-white display-4" href="page1.html#extContent6-l" aria-expanded="false">Facebook Ads</a></div></div>
+                            <a class="mbr-black dropdown-item text-primary display-4" href="page1.html#extHeader16-g">Análisis de Web Site</a>
+                            <a class="mbr-black dropdown-item text-primary display-4" href="page1.html#extHeader24-h" aria-expanded="false">Diseño Web</a><a class="mbr-black dropdown-item text-primary display-4" href="page1.html#extHeader16-i" aria-expanded="false">Diseño Landing Page</a>
+                            <div class="dropdown"><div class="dropdown"><a class="mbr-black dropdown-item dropdown-toggle text-primary display-4" href="page1.html#extHeader10-j" aria-expanded="false" data-toggle="dropdown-submenu">Campañas Digitales</a><div class="dropdown-menu dropdown-submenu"><a class="mbr-black dropdown-item text-primary display-4" href="page1.html#extHeader10-j" aria-expanded="false">Google Ads</a><a class="mbr-black dropdown-item text-primary display-4" href="page1.html#extHeader10-j" aria-expanded="false">Facebook Ads</a></div></div><div class="dropdown-menu dropdown-submenu"><a class="mbr-black dropdown-item text-primary display-4" href="page1.html#extContent6-k" aria-expanded="false">Adwords</a><a class="mbr-black dropdown-item text-primary display-4" href="page1.html#extContent6-l" aria-expanded="false">Facebook Ads</a></div></div>
                         </div>
                     </li>
 
                     <li class="nav-item dropdown">
-                        <a class="nav-link link mbr-black dropdown-toggle text-white display-4" href="https://mobirise.com" data-toggle="dropdown-submenu" aria-expanded="false">Asesorías</a>
+                        <a class="nav-link link mbr-black dropdown-toggle text-primary display-4" href="https://mobirise.com" data-toggle="dropdown-submenu" aria-expanded="false">Asesorías</a>
                         <div class="dropdown-menu">
-                            <a class="mbr-black dropdown-item text-white display-4" href="#top">Gestión Comercial</a>
-                            <a class="mbr-black dropdown-item text-white display-4" href="#top" aria-expanded="false">Coaching de equipos</a>
-                            <a class="mbr-black dropdown-item text-white display-4" href="#top" aria-expanded="false">Capacitaciones</a>
+                            <a class="mbr-black dropdown-item text-primary display-4" href="#top">Gestión Comercial</a>
+                            <a class="mbr-black dropdown-item text-primary display-4" href="#top" aria-expanded="false">Coaching de equipos</a>
+                            <a class="mbr-black dropdown-item text-primary display-4" href="#top" aria-expanded="false">Capacitaciones</a>
                         </div>
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link link mbr-black text-white display-4" href="https://mobirise.com">
+                        <a class="nav-link link mbr-black text-primary display-4" href="https://mobirise.com">
                             Contacto</a>
                     </li></ul>
 
@@ -143,7 +143,7 @@
                 <div class="mbr-section-subtitle mbr-fonts-style mbr-light pb-3 display-5">
                     <ul>
                         <li>
-                            <strong>Adela Espinoza</strong></li>
+                            <strong>Creative Tree Media</strong></li>
                     </ul>
                 </div>
                 <h2 class="mbr-section-title mbr-fonts-style mbr-bold display-1">
@@ -501,11 +501,11 @@
                 <h3 class="mbr-section-subtitle  mbr-light pb-2 mbr-fonts-style align-left display-7">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quae, odio illum voluptas necessitatibus nobis, autem exercitationem eum similique sequi ratione a corrupti ducimus minus nisi. Voluptatem fugit maxime totam esse.</h3>
                 <hr>     
                 
-                <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyCy9r70T3NYf3PhvVflTo0_zdif2_IoIYs&amp;q=place_id:ChIJn6wOs6lZwokRLKy1iqRcoKw" allowfullscreen=""></iframe></div>
+                <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyAEIpgj38KyLFELm2bK9Y7krBkz1K-cMq8&amp;q=place_id:ChIJn6wOs6lZwokRLKy1iqRcoKw" allowfullscreen=""></iframe></div>
             </div>
             <div class="media-container-column col-lg-5 ml-auto col-md-12" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="BBF6FCZ416yY/eTSmtUteiIz7DHxkwD14DrMRuGS/sVHsQM4BLZTF0YDW54HduQgFm6ngzU68pX+mZvzrH/4YscDrcxZy4/cE6kKMjPTpF/GMdLAPmHdBCNi+X/coW4G.YSYdzSOHw5NoJFAAOU45vQieNlgEVtGAw7yQw9G1Jwnyv3s7byMw0IsmGjc3S3rLa/njhoL2h/D4u2WvRBt44i/cMXMjXUc2KQ4vEssxlZlu7XXKhrouO/QsoSy27ecD">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="wQ73AiisPCkb1BOV9fmlapwszhvf9pWtvhxn3KZocIhXlye5+Tkif64Tv9qK20dGYAIxKb5MctuepgP9NUwoM+JpyqnbAXso+OJ1/hhKb3k9te9jw1Y2gY4eNINZu6Jr.OVX1oS8fK5TMjGdD6+bQIXrkqKqcdpLlKlIn+qjNu0FHi+JVUWeCdOTV20NaT85UQKhh8uZvqkOLMKm39QG5L8EjttVdVdEkVTh27u5uqIdFR6EDVuOPNiJ1cPRBO4bW">
                     <div class="form-row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">¡Gracias por rellenar este formulario!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12"></div>
