--- a/page1.html
+++ b/page1.html
@@ -40,7 +40,7 @@
                 <div class="info-widget">
                     <span class="widget-icon mbr-iconfont mbri-mobile2" style="color: rgb(255, 255, 255); fill: rgb(255, 255, 255);"></span>
                     <div class="widget-content display-4">
-                        <p class="widget-title mbr-fonts-style display-4">+ (51) 999 061 367</p>
+                        <p class="widget-title mbr-fonts-style display-4"><strong>+ (51) 999 061 367</strong></p>
                     </div>
                 </div>
                 <div class="info-widget">
@@ -72,7 +72,7 @@
                 <div class="navbar-brand">
                     <span class="navbar-logo">
                         <a href="#top">
-                            <img src="assets/images/ll.webp" alt="Mobirise" title="" style="height: 4rem;">
+                            <img src="assets/images/ll.webp" alt="Mobirise" title="" style="height: 5.5rem;">
                         </a>
                     </span>
                     <span class="navbar-caption-wrap"><a href="#top" class="brand-name mbr-black mbr-bold text-white display-5">Tree Media</a></span>
@@ -83,29 +83,29 @@
 
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav nav-dropdown js-float-line nav-right" data-app-modern-menu="true"><li class="nav-item">
-                        <a class="nav-link link mbr-black text-white display-4" href="index.html#extHeader29-2">
+                        <a class="nav-link link mbr-black text-primary display-4" href="index.html#extHeader29-2">
                             Quiénes somos</a>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link link mbr-black dropdown-toggle text-white display-4" href="https://mobirise.com" data-toggle="dropdown-submenu" aria-expanded="false">Marketing Digital</a>
+                        <a class="nav-link link mbr-black dropdown-toggle text-primary display-4" href="https://mobirise.com" data-toggle="dropdown-submenu" aria-expanded="false">Marketing Digital</a>
                         <div class="dropdown-menu">
-                            <a class="mbr-black dropdown-item text-white display-4" href="page1.html#extHeader16-g">Análisis de Web Site</a>
-                            <a class="mbr-black dropdown-item text-white display-4" href="page1.html#extHeader24-h" aria-expanded="false">Diseño Web</a><a class="mbr-black dropdown-item text-white display-4" href="page1.html#extHeader16-i" aria-expanded="false">Diseño Landing Page</a>
-                            <div class="dropdown"><div class="dropdown"><a class="mbr-black dropdown-item text-white dropdown-toggle display-4" href="page1.html#extHeader10-j" aria-expanded="false" data-toggle="dropdown-submenu">Campañas Digitales</a><div class="dropdown-menu dropdown-submenu"><a class="mbr-black dropdown-item text-white display-4" href="page1.html#extHeader10-j" aria-expanded="false">Google Ads</a><a class="mbr-black dropdown-item text-white display-4" href="page1.html#extHeader10-j" aria-expanded="false">Facebook Ads</a></div></div><div class="dropdown-menu dropdown-submenu"><a class="mbr-black dropdown-item text-white display-4" href="page1.html#extContent6-k" aria-expanded="false">Adwords</a><a class="mbr-black dropdown-item text-white display-4" href="page1.html#extContent6-l" aria-expanded="false">Facebook Ads</a></div></div>
+                            <a class="mbr-black dropdown-item text-primary display-4" href="page1.html#extHeader16-g">Análisis de Web Site</a>
+                            <a class="mbr-black dropdown-item text-primary display-4" href="page1.html#extHeader24-h" aria-expanded="false">Diseño Web</a><a class="mbr-black dropdown-item text-primary display-4" href="page1.html#extHeader16-i" aria-expanded="false">Diseño Landing Page</a>
+                            <div class="dropdown"><div class="dropdown"><a class="mbr-black dropdown-item dropdown-toggle text-primary display-4" href="page1.html#extHeader10-j" aria-expanded="false" data-toggle="dropdown-submenu">Campañas Digitales</a><div class="dropdown-menu dropdown-submenu"><a class="mbr-black dropdown-item text-primary display-4" href="page1.html#extHeader10-j" aria-expanded="false">Google Ads</a><a class="mbr-black dropdown-item text-primary display-4" href="page1.html#extHeader10-j" aria-expanded="false">Facebook Ads</a></div></div><div class="dropdown-menu dropdown-submenu"><a class="mbr-black dropdown-item text-primary display-4" href="page1.html#extContent6-k" aria-expanded="false">Adwords</a><a class="mbr-black dropdown-item text-primary display-4" href="page1.html#extContent6-l" aria-expanded="false">Facebook Ads</a></div></div>
                         </div>
                     </li>
 
                     <li class="nav-item dropdown">
-                        <a class="nav-link link mbr-black dropdown-toggle text-white display-4" href="https://mobirise.com" data-toggle="dropdown-submenu" aria-expanded="false">Asesorías</a>
+                        <a class="nav-link link mbr-black dropdown-toggle text-primary display-4" href="https://mobirise.com" data-toggle="dropdown-submenu" aria-expanded="false">Asesorías</a>
                         <div class="dropdown-menu">
-                            <a class="mbr-black dropdown-item text-white display-4" href="#top">Gestión Comercial</a>
-                            <a class="mbr-black dropdown-item text-white display-4" href="#top" aria-expanded="false">Coaching de equipos</a>
-                            <a class="mbr-black dropdown-item text-white display-4" href="#top" aria-expanded="false">Capacitaciones</a>
+                            <a class="mbr-black dropdown-item text-primary display-4" href="#top">Gestión Comercial</a>
+                            <a class="mbr-black dropdown-item text-primary display-4" href="#top" aria-expanded="false">Coaching de equipos</a>
+                            <a class="mbr-black dropdown-item text-primary display-4" href="#top" aria-expanded="false">Capacitaciones</a>
                         </div>
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link link mbr-black text-white display-4" href="https://mobirise.com">
+                        <a class="nav-link link mbr-black text-primary display-4" href="https://mobirise.com">
                             Contacto</a>
                     </li></ul>
 
